Added user story 4

--- a/app/views/astronauts/index.html.erb
+++ b/app/views/astronauts/index.html.erb
@@ -8,6 +8,7 @@
       <li>Name: <%= astronaut.name %></li>
       <li>Age: <%= astronaut.age %></li>
       <li>Job: <%= astronaut.job %></li>
+      <li>Total Time in Space: <%= astronaut.total_time_in_space %> days</li>
     </ul>
     <section class="missions" id='astronaut-<%= astronaut.id %>-missions'>
       <h1>Missions</h1>
